Resources/Adding StdDev and BoxPlots/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_array_copy_altergo.txt
[kernel] Parsing array_copy_rte.c (with preprocessing)
[kernel] array_copy_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing array_copy.c (with preprocessing)
  3     [rte:annot] annotating function array_copy
[kernel] Frama-C aborted: invalid user input.
